[gd_scene load_steps=11 format=3 uid="uid://dbre682120ryy"]

[ext_resource type="Texture2D" uid="uid://bkhmyvyb7lvj1" path="res://assests/enemies/plant_enemy/plant_enemy1.png" id="1_5hcif"]
[ext_resource type="Script" uid="uid://xb8xup12ihpd" path="res://scripts/enemy_plant.gd" id="1_axj4m"]
[ext_resource type="Texture2D" uid="uid://dmkjd8ywqf602" path="res://assests/enemies/plant_enemy/plant_enemy2.png" id="2_axj4m"]
[ext_resource type="Texture2D" uid="uid://bijlb1xpklydl" path="res://assests/enemies/plant_enemy/plant_enemy3.png" id="3_jn3pj"]
[ext_resource type="Texture2D" uid="uid://dvupsea2ap3eg" path="res://assests/enemies/plant_enemy/plant_enemy4.png" id="4_t0o0f"]
[ext_resource type="Texture2D" uid="uid://b7mpxpt5nbbwl" path="res://assests/enemies/plant_enemy/plant_enemy5.png" id="5_vg5j2"]
[ext_resource type="Texture2D" uid="uid://y5y5vn70topu" path="res://assests/enemies/plant_enemy/plant_enemy6.png" id="6_iheac"]
[ext_resource type="Texture2D" uid="uid://cqtgm8flel1si" path="res://assests/enemies/plant_enemy/plant_enemy7.png" id="7_q5n3w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ptdnp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5hcif")
}, {
"duration": 1.0,
"texture": ExtResource("2_axj4m")
}, {
"duration": 1.0,
"texture": ExtResource("3_jn3pj")
}, {
"duration": 1.0,
"texture": ExtResource("4_t0o0f")
}, {
"duration": 1.0,
"texture": ExtResource("5_vg5j2")
}, {
"duration": 1.0,
"texture": ExtResource("6_iheac")
}, {
"duration": 1.0,
"texture": ExtResource("7_q5n3w")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5hcif"]
radius = 14.0
height = 38.0

[node name="enemy_plant" type="Area2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_axj4m")

[node name="enemy_plant_anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ptdnp")
animation = &"attack"
frame = 5

[node name="enemy_plant_coll" type="CollisionShape2D" parent="."]
position = Vector2(6, 1)
shape = SubResource("CapsuleShape2D_5hcif")

[node name="bullet_pos" type="Marker2D" parent="."]
position = Vector2(-26, -6)

[node name="bullet_node" type="Node2D" parent="."]

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 0.65
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
